# Grid_Board

./: CMakeLists.txt  README.md  sdkconfig
grid_board_app/: .gitignore  README.md  pubspec.yaml
grid_board_app/lib/: main.dart
main/: CMakeLists.txt  grid_board.cpp  grid_board.hpp  idf_component.yml  main.cpp
